RESOLVED FIXED92466
[EFL] Fix wrong return value in EWK_VIEW_XXX macro
https://bugs.webkit.org/show_bug.cgi?id=92466
Summary [EFL] Fix wrong return value in EWK_VIEW_XXX macro
Gyuyoung Kim
Reported 2012-07-26 23:45:17 PDT
There are wrong return values in EWK_VIEW_XXX macros. The wrong return values should be fixed. In addition, API description is also modified according to returned value change.
Attachments
Patch (8.35 KB, patch)
2012-07-26 23:50 PDT, Gyuyoung Kim
no flags
Patch (8.44 KB, patch)
2012-07-27 00:54 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2012-07-26 23:50:39 PDT
Gyuyoung Kim
Comment 2 2012-07-27 00:02:45 PDT
Gyuyoung Kim
Comment 3 2012-07-27 00:54:13 PDT
Gyuyoung Kim
Comment 4 2012-07-27 01:31:40 PDT
Comment on attachment 154869 [details] Patch Thank you for your review.
WebKit Review Bot
Comment 5 2012-07-27 02:55:28 PDT
Comment on attachment 154869 [details] Patch Clearing flags on attachment: 154869 Committed r123858: <http://trac.webkit.org/changeset/123858>
WebKit Review Bot
Comment 6 2012-07-27 02:55:32 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 7 2012-07-27 07:42:33 PDT
Comment on attachment 154869 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154869&action=review > Source/WebKit/efl/ewk/ewk_view.cpp:4042 > + EWK_VIEW_SD_GET_OR_RETURN(ewkView, smartData, false); This change looks wrong. This breaks the unit tests. By default, the policy is to accept, which means that we need to return true.
Chris Dumez
Comment 8 2012-07-27 08:03:38 PDT
Comment on attachment 154869 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154869&action=review > Source/WebKit/efl/ewk/ewk_view.cpp:4046 > + return false; Actually, it is this line in particular that is wrong. The EINA checks can stay keep using false.
Chris Dumez
Comment 9 2012-07-27 08:24:14 PDT
Gyuyoung, in the future you can run the unit tests using: Tools/Script/run-efl-tests You would have caught the problem early.
Note You need to log in before you can comment on or make changes to this bug.