[EFL] Fix wrong return value in EWK_VIEW_XXX macro. https://bugs.webkit.org/show_bug.cgi?id=92466

Reviewed by Simon Hausmann.

There are wrong return values in EWK_VIEW_XXX macros. The wrong return values
should be fixed. In addition, API description is also modified according to returned
value change.

Source/WebKit/efl:

* ewk/ewk_view.cpp:
(ewk_view_setting_minimum_timer_interval_get):
(ewk_view_navigation_policy_decision):
(ewk_view_page_rect_get):
(ewk_view_setting_enable_xss_auditor_get):
* ewk/ewk_view.h:

Source/WebKit2:

* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_uri_set):
(ewk_view_load_progress_get):
(ewk_view_device_pixel_ratio_get):
* UIProcess/API/efl/ewk_view.h:


Canonical link: https://commits.webkit.org/110293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123858 268f45cc-cd09-0410-ab3c-d52691b4dbfc